
  syntax = "proto3";

  package user;

  service UserService {
    rpc GetUser (UserRequest) returns (UserResponse);
  }

  message UserRequest {
    string id = 1; // User ID
  }

  message UserResponse {
    string id = 1;     // User ID
    string name = 2;   // User Name
    string email = 3;  // User Email
    bool isActive = 4;
  }
